@@ -235,13 +235,12 @@ sample_tree_SNV <- function(tree, n_SNV=NULL){
 #' @param doublet_rate A float from 0 to 1 for doublet rate; default NULL means
 #' rate n_cell / 100000
 #' @param rand_seed A integer for random number generation
-#' @param gene_ASE A logic value, if true, use gene specific allele expression 
 #' @export
 #' 
 donor_read_simulator <- function(GT, D_seed, sample_variants=FALSE, 
                                  donor_size=NULL, beta_shapes=NULL, 
                                  n_cell=5000, doublet_rate=NULL, 
-                                 rand_seed=NULL, gene_ASE=FALSE){
+                                 rand_seed=NULL){
     K <- ncol(GT)  # number of clones
     N <- nrow(GT)  # number of variants
     if (!is.null(rand_seed)) {
@@ -249,7 +248,7 @@ donor_read_simulator <- function(GT, D_seed, sample_variants=FALSE,
     }
     if (is.null(beta_shapes)) {
         #beta_shapes <- matrix(c(0.3, 3, 29.7, 29.7, 3, 0.3), nrow = 3)
-        beta_shapes <- matrix(c(0.2, 0.5, 99.8, 99.8, 0.5, 0.2), nrow = 3)
+        beta_shapes <- matrix(c(0.2, 0.1, 99.8, 99.8, 0.1, 0.2), nrow = 3)
     }
     if (is.null(doublet_rate)) {
         doublet_rate <- n_cell / 100000
@@ -262,15 +261,6 @@ donor_read_simulator <- function(GT, D_seed, sample_variants=FALSE,
     ## generate donor id matrix
     n_doublet <- round(doublet_rate * n_cell)
     I_sim <- t(rmultinom(n_cell + n_doublet, 1, prob = donor_size))
-    # I_label <- I_sim %*% seq_len(K)
-    
-    ## generate binomial parameter for each variant
-    p_sim <- matrix(NA, nrow = N, ncol = nrow(beta_shapes))
-    for (ii in seq_len(nrow(beta_shapes))) {
-        nn <- 1
-        if (gene_ASE) { nn <- N }
-        p_sim[, ii] <- stats::rbeta(nn, beta_shapes[ii, 1], beta_shapes[ii, 2])
-    }
     
     ## generate D
     if (sample_variants) {
@@ -281,13 +271,17 @@ donor_read_simulator <- function(GT, D_seed, sample_variants=FALSE,
     D_sim <- D_sim[, sample(ncol(D_sim), nrow(I_sim), replace = TRUE)]
     D_sim <- Matrix::Matrix(D_sim, sparse = TRUE)
     
-    ## generate A
+    ## generate A with beta binomial  
     A_sim <- D_sim
-    idx <- which(as.matrix(D_sim) > 0)
-    H_sim_vec <- (GT %*% t(I_sim) + 1)[idx]
-    idx_p <- (H_sim_vec - 1) * N + ((idx - 1) %% N) + 1
-    p_sim_vec <- p_sim[idx_p]
-    A_sim[idx] <- rbinom(length(idx), D_sim[idx], p_sim_vec)
+    H_sim <- GT %*% t(I_sim)
+    for (ii in seq_len(3)) {
+        val2 <- beta_shapes[ii, 1] + beta_shapes[ii, 2]
+        val1 <- beta_shapes[ii, 1] / val2
+        
+        idx <- which(as.matrix(D_sim) > 0 & H_sim == (ii - 1))
+        A_sim[idx] <- VGAM::rbetabinom(length(idx), size=D_sim[idx], 
+                                       prob=val1, rho=1/(1+val2))
+    }
     
     ## pooling doublet
     idx_doublet1 <- sample(n_cell, n_doublet)
@@ -301,12 +295,11 @@ donor_read_simulator <- function(GT, D_seed, sample_variants=FALSE,
     
     ## output
     colnames(I_sim) <- colnames(GT)
-    row.names(p_sim) <- row.names(A_sim) <- row.names(D_sim) <- row.names(GT)
+    row.names(A_sim) <- row.names(D_sim) <- row.names(GT)
     cell_names <- paste0("cell", seq_len(ncol(A_sim)))
     row.names(I_sim) <- colnames(A_sim) <- colnames(D_sim) <- cell_names
 
     return_list <- list("A" = A_sim, "D" = D_sim,
-                        "I_sim" = I_sim, "p_sim" = p_sim,
-                        "GT" = GT)
+                        "I_sim" = I_sim, "GT" = GT)
     return_list
 }
